Update InferencePool helm chart to use FailOpen as default (#2365)
* Update InferencePool helm chart default to FailOpen

* Revert InferencePool API default to FailClose, keep Helm default FailOpen

* Update helm chart

* Allow helm chart template to pass FailOpen configuration to it

* Modify failureMode in values.yaml

* Remove v1 inference types and CRDs from PR

* Modify model name in documentation

* Restore deleted line

* Reverting change to documentation as requested

* Revert inferencepool.md documentation.

---------

Co-authored-by: Ryan Rosario <6713180+RyanRosario@users.noreply.github.com>

--- a/config/charts/inferencepool/templates/inferencepool.yaml
+++ b/config/charts/inferencepool/templates/inferencepool.yaml
@@ -17,7 +17,7 @@ spec:
   extensionRef:
     name: {{ include "gateway-api-inference-extension.name" . }}
     portNumber: {{ .Values.inferenceExtension.extProcPort | default 9002 }}
-    failureMode: {{ .Values.inferenceExtension.failureMode | default "FailClose" }}
+    failureMode: {{ .Values.inferenceExtension.failureMode | default "FailOpen" }}
 {{ else }}
 {{ include "gateway-api-inference-extension.validations.inferencepool.common" $ }}
 apiVersion: "inference.networking.k8s.io/v1"
@@ -43,4 +43,5 @@ spec:
     name: {{ include "gateway-api-inference-extension.name" . }}
     port:
       number: {{ .Values.inferenceExtension.extProcPort | default 9002 }}
+    failureMode: {{ .Values.inferenceExtension.failureMode | default "FailOpen" }}
 {{- end }}
