--- a/config/charts/inferencepool/values.yaml
+++ b/config/charts/inferencepool/values.yaml
@@ -6,6 +6,7 @@ inferenceExtension:
     tag: main
     pullPolicy: Always
   extProcPort: 9002
+  failureMode: "FailOpen"
   env: []
   pluginsConfigFile: "default-plugins.yaml"
   # Define additional container ports
