Guide fixes as a followup to the qwen move (#2431)

--- a/config/manifests/vllm/gpu-deployment.yaml
+++ b/config/manifests/vllm/gpu-deployment.yaml
@@ -27,6 +27,8 @@ spec:
           - "8000"
           - "--max-num-seq"
           - "1024"
+          - "-max-model-len"
+          - "16000"
           - "--enable-lora"
           - "--max-loras"
           - "2"
